--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Liron Nyambu | Built with ❤️</p>
+    <p>&copy; 2025 Liron Nyambu</p>
   </footer>
 </body>
 </html>
