--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     h1, h2 { border-bottom: 1px solid #ccc; padding-bottom: 0.5em; }
     .project { margin-bottom: 1.5em; }
     a.button { background: #000; color: #fff; padding: 0.5em 1em; text-decoration: none; display: inline-block; margin-top: 1em; }
+    ul.skills-list { list-style: disc; margin-left: 1.5em; }
   </style>
 </head>
 <body>
@@ -34,11 +35,17 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I am currently pursuing a Diploma in Cybersecurity at Riara University. Previously studied Cybersecurity and Forensic Science at the University of Portsmouth, UK. I focus on network security, ethical hacking, Python scripting, and forensic investigations.</p>
+    <p>I am currently pursuing a Diploma in Cybersecurity at Riara University. Previously studied Cybersecurity and Forensic Science at the University of Portsmouth, UK. I focus on network security, ethical hacking, and digital forensics.</p>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
+    <div class="project">
+      <h3>HeartSync – Relationship Management Web App</h3>
+      <p>
+        HeartSync is a modern relationship management platform designed to help users organize and personalize their connections. Built with Java (Spring Boot) and a clean, responsive UI, it features user authentication, profile customization, and interactive dashboards for adding, editing, and managing relationships. The project focuses on intuitive design, smooth navigation, and future integration of real-time updates and messaging capabilities.
+      </p>
+    </div>
     <div class="project">
       <h3>Internal Network Vulnerability Scan</h3>
       <p>Used Nmap and Nikto to identify vulnerabilities in a test environment.</p>
@@ -57,6 +64,15 @@
     <h2>Resume</h2>
     <p>Download my full resume:</p>
     <a href="Liron_Nyambu_Cybersecurity_Resume.pdf" class="button" download>Download Resume (PDF)</a>
+    <h3>Skills</h3>
+    <ul class="skills-list">
+      <li>Network Security</li>
+      <li>Ethical Hacking</li>
+      <li>Digital Forensics</li>
+      <li>Web Development (HTML, CSS, Java)</li>
+    </ul>
+    <h3>GitHub</h3>
+    <p><a href="https://github.com/lilrawn" target="_blank">github.com/lilrawn</a></p>
   </section>
 
   <section id="contact">
@@ -64,7 +80,7 @@
     <p>Email: <a href="mailto:liron4908@gmail.com">liron4908@gmail.com</a></p>
     <p>Phone: +245726952795</p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/liron-nyambu-350294256" target="_blank">Liron Nyambu</a></p>
-    <p>GitHub: <a href="https://github.com/" target="_blank">github.com/lilrawn</a></p>
+    <p>GitHub: <a href="https://github.com/lilrawn" target="_blank">github.com/lilrawn</a></p>
   </section>
 
   <footer>
