--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
+       <a href="#certifications">Certifications</a>
       <a href="#resume">Resume</a>
       <a href="#contact">Contact</a>
     </nav>
@@ -60,17 +61,19 @@
     </div>
   </section>
 
+   <section id="certifications">
+    <h2>Certifications</h2>
+    <ul>
+      <li><b Cisco Introduction to Cybersecurity (Completed)</li>
+      <li><b TryHackMe Cyber Defence Pathway (In Progress)</li>
+      <li><b Google Cybersecurity Professional Certificate (Planned - Financial aid in progress)</li>
+    </ul>
+  </section>
+
   <section id="resume">
     <h2>Resume</h2>
     <p>Download my full resume:</p>
     <a href="Liron_Nyambu_Cybersecurity_Resume.pdf" class="button" download>Download Resume (PDF)</a>
-    <h3>Skills</h3>
-    <ul class="skills-list">
-      <li>Network Security</li>
-      <li>Ethical Hacking</li>
-      <li>Digital Forensics</li>
-      <li>Web Development (HTML, CSS, Java)</li>
-    </ul>
     <h3>GitHub</h3>
     <p><a href="https://github.com/lilrawn" target="_blank">github.com/lilrawn</a></p>
   </section>
