--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
    <section id="certifications">
     <h2>Certifications</h2>
     <ul>
-      <li><b Cisco Introduction to Cybersecurity (Completed)</li>
-      <li><b TryHackMe Cyber Defence Pathway (In Progress)</li>
-      <li><b Google Cybersecurity Professional Certificate (Planned - Financial aid in progress)</li>
+      <li><b>Cisco Introduction to Cybersecurity (Completed)</b></li>
+      <li><b>TryHackMe Cyber Defence Pathway (In Progress)</b></li>
+      <li><b> Google Cybersecurity Professional Certificate (Planned - Financial aid in progress)</b></li>
     </ul>
   </section>
 
