Add additional information about web development skills

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     <div class="project">
       <h3>Web App Security CTFs</h3>
       <p>Completed OWASP Top 10 focused CTFs on TryHackMe &amp; HackTheBox, demonstrating practical exploitation and mitigation strategies.</p>
+      <p class="muted">I also do web development and can take on full-stack or backend roles as needed.</p>
     </div>
   </section>
 
