Add skills section with technical competencies
Added a new skills section detailing technical competencies and tools.

--- a/index.html
+++ b/index.html
@@ -113,6 +113,20 @@
     </div>
   </section>
 
+  <section id="skills">
+    <h2>Skills</h2>
+    <p>I possess a strong blend of technical cybersecurity competencies along with practical defensive and investigative experience gained through labs, real project roles, hackathons, and structured academic work in the UK and Kenya.</p>
+  <h2>Skills</h2>
+  <ul class="skills-list">
+    <li><strong>Cyber Defense:</strong> SIEM monitoring, alert triage, real-time log analysis, threat detection, vulnerability assessments.</li>
+    <li><strong>Digital Forensics:</strong> evidence capture, chain-of-custody, disk & RAM imaging, packet inspection, forensic reporting.</li>
+    <li><strong>Security Tools:</strong> Wireshark, Autopsy, FTK Imager, Splunk basics, Nmap, Burp Suite, OSSEC, Suricata, THM/HTB Labs.</li>
+    <li><strong>Programming & Backend:</strong> PHP, Python, MySQL, REST APIs, system design, Git versioning, deployment workflows.</li>
+    <li><strong>Networking:</strong> TCP/IP, OSI, VPNs, DNS, firewalls, routing, secure configurations.</li>
+    <li><strong>Soft Skills:</strong> structured reporting, analytical thinking, leadership in collaborative builds, accountability, rapid learning.</li>
+  </ul>
+    
+
   <section id="certifications">
     <h2>Certifications</h2>
     <p class="muted">Certifications are currently in progress. I am actively completing practical pathways and professional certificates to strengthen my defensive and forensics skills.</p>
